changed codemirrors and layout to match fixed overflow-y to scroll and changed parent DOM node to not overlap and create two scrolls by changing height to 100%

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -8,6 +8,6 @@
 }
 
 #children {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
