--- a/src/routes/BattlePage/components/Problem.scss
+++ b/src/routes/BattlePage/components/Problem.scss
@@ -1,5 +1,5 @@
 .container-fluid-problem{
-  background-color: white;
+  background-color: red;
 }
 
 p {
