--- a/src/routes/BattlePage/containers/BattlePageContainer.scss
+++ b/src/routes/BattlePage/containers/BattlePageContainer.scss
@@ -1,13 +1,16 @@
+// #codeeditor {
+//   width: 700px;
+//   padding: 0px;
+// }
+
 #codeeditor {
-  width: 700px;
-  padding: 0px;
-}
-.container-fluid-battlepage {
-  background-color: green;
-
+  height: 100%;
 }
 
-.row-fluid-battlepage {
-  background-color: blue;
-}
+
+
+
+// .row-fluid-battlepage {
+//   background-color: blue;
+// }
 
