--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -1,11 +1,3 @@
-.duck {
-  display: block;
-  width: 120px;
-  margin: 1.5rem auto;
-}
-
-
-
 h2 {
   text-align: center;
   color: white
@@ -13,8 +5,8 @@ h2 {
 
 
 #introaboutcode {
-  margin-left: -20px;
-  margin-right: -20px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 img {
