--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -157,7 +157,3 @@ footer {
     padding: 50px 0;
     background-color: #f8f8f8;
 }
-
-p.copyright {
-    margin: 15px 0 0;
-}
